--- a/text/conclusion.tex
+++ b/text/conclusion.tex
@@ -5,7 +5,7 @@ Because supercomputer centers have an increasingly large and fluctuating
 power demand, they challenge their providers to supply a reliable
 source of electricity.
 Electricity service providers are interested in partnering with customers,
-like supercomputer users, to create a more dynamic and resilient gr;id
+like supercomputer centers, to create a more dynamic and resilient grid
 by obtaining predictable demand forecasts and engaging in programs like 
 demand response.
 
@@ -43,7 +43,7 @@ We are planning a similar survey for Europe to explore if there is a more compel
 in other geographies.
 We expect the business value of such grid integration to be enhanced where the price of 
 electricity is expensive, varies dynamically, or where there is strong reliance on expensive back-up 
-generation (e.g., India),   
+generation (e.g., India).   
 
 We plan on following-up with the ESPs that support these US-based supercomputer 
 centers. We note that this work's focus was from the perspective of the supercomputer center, and 
@@ -51,10 +51,8 @@ we are interested in hearing from the ESPs about what makes a customer more or l
 challenging with respect to grid integration.
 
 With increasing variable renewable generation and price-based DR programs, the intra-hour fluctuations 
-and demand forecasting are becoming increasingly important. 
+and demand forecasting are becoming increasingly important.
 Electrical grid programs may react in different ways to the timescale of a supercomputer center's load response.
 What are the trends 
-in inter-hour fluctuation patterns?  Is this a new behavior, an interim one, or one that is likely to get worse?  
-
-
+in inter-hour fluctuation patterns?  Is this a new behavior, an interim one, or one that is likely to get worse?
 
