Slight changes to grid as a constant paragraph

--- a/text/intro.tex
+++ b/text/intro.tex
@@ -39,7 +39,7 @@ A mutual understanding of concerns between the SC and ESP can
 produce a symbiotic relation that goes beyond the current producer-consumer 
 paradigm, paving the way for possible integration of HPC with the electrical grid.
 
-In this paper, we assume that the grid is a given constant as a fundamental property. However, grid integration solutions may take into consideration that it is not a given constant as electrical grid infrastructures will evolve in the future \cite{he_architecture_2008}. Thus, changes in the grid could make grid integration more or less difficult.
+In this paper, we assume fundamentally that the grid is a given constant. However, grid integration solutions may take into consideration that it is not a constant as electrical grid infrastructures will evolve in the future \cite{he_architecture_2008}. Thus, changes in the grid could make grid integration more or less difficult.
 
 The Energy Efficient HPC Working Group (\href {http://eehpcwg.lbl.gov/}{EE HPC WG})  
 has been investigating opportunities for large supercomputing sites to  
