fixed ref in intro; reordering in survey for format

--- a/text/questions.tex
+++ b/text/questions.tex
@@ -3,13 +3,13 @@
 This should be the same as the total facility energy number that is used for calculating PUE, 
 as defined by the Green Grid Whitepaper \#49.  Total facility energy includes all 
 HPC equipment energy plus everything that supports the HPC equipment using energy, such as:
-\begin{itemize}
+\begin{itemize} [nosep]
 \item[{-}]
-Power delivery components, including UPS systems, switchgear, generators, power 
-distribution units (PDUs), batteries, and distribution losses external to the IT equipment  
+Power delivery components, including UPS systems, switchgear, generators, batteries, power 
+distribution units (PDUs), and distribution losses external to the IT equipment  
 \item[{-}]
 Cooling system components, such as chillers, cooling towers, pumps, computer 
-room air handling units (CRAHs), computer room air conditioning units (CRACs), and direct 
+room air conditioning units (CRACs), computer room air handling units (CRAHs), and direct 
 expansion air handler (DX) units  
 \item[{-}]
 Other miscellaneous component loads, such as data center lighting.
@@ -59,7 +59,7 @@ Example: power capping.
 \wl
 \noindent
 \textbf{FINE GRAINED POWER MANAGEMENT:}  intelligent built-in power management.  
-Examples: voltage and frequency governors, hibernation. - Comments	
+Examples: voltage and frequency governors, hibernation.
 
 \wl
 \noindent
@@ -104,7 +104,7 @@ Please describe.
 \noindent
 \textbf{Please evaluate as high, medium or low the MW impact of each of these strategies as a 
 response to a grid request. }
-\begin{itemize}
+\begin{itemize} [nosep]
 \item[{-}] Power capping	
 \item[{-}] Load migrations	
 \item[{-}] Temperature adjustments	
@@ -118,6 +118,7 @@ response to a grid request. }
 \end{itemize}
 
 \wl
+\noindent
 \textbf{PEAK SHEDDING:}  Utility provider arrangements used to reduce peak load, where the 
 reduced load is not shifted to another time. 
 Describe the nature of the communication	
