--- a/text/intro.tex
+++ b/text/intro.tex
@@ -72,6 +72,6 @@ is a review of prior work on HPC center strategies that might be
 deployed for managing electricity and power. Section~\ref{sec:questionnaire} of this paper
 describes the results of the questionnaire. Section~\ref{sec:opportunities} of the paper
 describes opportunities, solutions and barriers. Section~\ref{sec:conclusion} describes
-conclusions and next steps. Finally, the last section recognizes additional
+conclusions and next steps. Finally, Section~\ref{sec:additional} recognizes additional
 authors.
 
