added ref to conclusions; format on questions

--- a/bib/whitepaper.bib
+++ b/bib/whitepaper.bib
@@ -1,3 +1,40 @@
+@TECHREPORT{LBNL-6560E,
+  AUTHOR =        {Girish Ghatikar and David Riess and Mary Ann Piette},
+  TITLE =         {Analyis of Open Automated Demand Response Deployments in California and Guidelines to Transition to Industry Standards},
+  NUMBER =        {LBNL-6560E},
+  INSTITUTION =   {Lawrence Berkeley National Laboratory},
+  ADDRESS =       {1 Cyclotron Rd, Berkeley, CA 94720},
+  ABSTRACT =      {This report reviews the Open Automated Demand Response (OpenADR) deployments 
+within the territories serviced by California’s investor-­‐owned utilities (IOUs) and the 
+transition from the OpenADR 1.0 specification to the formal standard—OpenADR 2.0.  
+As demand response service providers and customers start adopting OpenADR 2.0, it 
+is necessary to ensure that the existing Automated Demand Response (AutoDR) infrastructure 
+investment continues to be useful and takes advantage of the formal standard and its many 
+benefits.  This study focused on OpenADR deployments and systems used by the California IOUs 
+and included a summary of the OpenADR deployment from the U.S.  Department of Energy-­‐funded
+ demonstration conducted by the Sacramento Municipal Utility District (SMUD).  Lawrence Berkeley 
+National Laboratory collected and analyzed data about OpenADR 1.0 deployments, categorized 
+architectures, developed a data model mapping to understand the technical compatibility of 
+each version, and compared the capabilities and features of the two specifications.  The 
+findings, for the first time, provided evidence of the total enabled load shed and average first 
+cost for system enablement in the IOU and SMUD service territories.  The OpenADR 2.0a profile 
+specification semantically supports AutoDR system architectures and data propagation with a 
+testing and certification program that promotes interoperability, scaled deployments by 
+multiple vendors, and provides additional features that support future services.},
+  KEYWORDS =      {},
+  NOTE =          {},
+  MONTH =         {January},
+  YEAR  =         {2014},
+  AUTHOR1_URL =   {},
+  AUTHOR1_EMAIL = {},
+  AUTHOR2_URL =   {},
+  AUTHOR2_EMAIL = {},
+  PAGES =         {},
+  FILE  =         {},
+  URL   =         {},
+  CONTACT =       {}
+}
+
 @inproceedings{yang_integrating_2013,
 	address = {New York, {NY}, {USA}},
 	series = {{SC} '13},
@@ -84,7 +121,7 @@
 	author = {Varma, Ankush and Ganesh, Brinda and Sen, Mainak and Choudhury, Suchismita Roy and Srinivasan, Lakshmi and Jacob, Bruce},
 	year = {2003},
 	keywords = {{PID}, dynamic voltage scaling, low-power, {nqPID}},
-	pages = {255–266}
+	pages = {255--266}
 },
 
 @inproceedings{burd_energy_1995,
@@ -871,12 +908,12 @@ The bus-level control improves power and voltage ramping rates, reduces wind pow
 
 @inproceedings{lifka_anl/ibm_1995,
 	title = {The {ANL/IBM} {SP} scheduling system},
-	abstract = {During the past ve years scientists discovered that modern {UNIX} workstations connected with ethernet and ber networks could provide enough computational performance to compete with the supercomputers of the day. As this concept became increasingly popular, the need for distributed queuing and scheduling systems became apparent. Systems such as {DQS} from Florida State were developed and worked very well. Today, supercomputers, such as Argonne National Laboratory's {IBM} {SP} system, can provide more {CPU} and networking speed than can be obtained from these networks of workstations. These modern supercomputers look like clusters of workstations, however, so developers felt that the scheduling systems that were previously used on clusters of workstations should still apply. After trying to apply some of these scheduling systems to Argonne's {SP} environment, it became obvious that these two computer environments have very di erent scheduling needs. Recognizing this need and realizing that no one has addressed it, I developed a new scheduling system. The approach taken in creating this system was unique in that user input and interaction were encouraged throughout the development process. Thus, ascheduler was built that actually \&quot;worked \&quot; the way the users wanted it to work.},
+	abstract = {During the past five years scientists discovered that modern {UNIX} workstations connected with ethernet and ber networks could provide enough computational performance to compete with the supercomputers of the day. As this concept became increasingly popular, the need for distributed queuing and scheduling systems became apparent. Systems such as {DQS} from Florida State were developed and worked very well. Today, supercomputers, such as Argonne National Laboratory's {IBM} {SP} system, can provide more {CPU} and networking speed than can be obtained from these networks of workstations. These modern supercomputers look like clusters of workstations, however, so developers felt that the scheduling systems that were previously used on clusters of workstations should still apply. After trying to apply some of these scheduling systems to Argonne's {SP} environment, it became obvious that these two computer environments have very di erent scheduling needs. Recognizing this need and realizing that no one has addressed it, I developed a new scheduling system. The approach taken in creating this system was unique in that user input and interaction were encouraged throughout the development process. Thus, ascheduler was built that actually \&quot;worked \&quot; the way the users wanted it to work.},
 	booktitle = {In Job Scheduling Strategies for Parallel Processing},
 	publisher = {Springer-Verlag},
 	author = {Lifka, David A.},
 	year = {1995},
-	pages = {295–303}
+	pages = {295--303}
 },
 
 @inproceedings{czajkowski_resource_1999,
