--- a/text/conclusion.tex
+++ b/text/conclusion.tex
@@ -21,7 +21,7 @@ The LANL supercomputer center's experience is similar to that of LLNL. SDSC has 
 with their electricity service provider, but this relationship involves the entire campus and not just the 
 supercomputer center.  
 
-As previous research with datacenters has shown \textbf{[need a ref here]}, supercomputer centers can serve as   
+As previous research with datacenters has shown \cite{LBNL-6560E}, supercomputer centers can serve as   
 resources to the grid. To enable this, automation technologies and data communication standards, 
 which can link the supercomputer centers with the electric grid and on-site power management strategies 
 for grid services will play a key role to ease adoption and lower the participation costs.  Power capping, 
