--- a/text/questions.tex
+++ b/text/questions.tex
@@ -47,8 +47,8 @@ Please provide exact number in comment box, if possible.
 \textbf{How often does this variation occur?}
 If there is any regular pattern to this variation, please describe the circumstances.  
 Include the reason for the variation, the magnitude and duration if possible.  
-E.g., "There is a 5MW drop every two weeks for a 6 hour period during Preventative Maintenance 
-periods." 
+E.g., ``There is a 5MW drop every two weeks for a 6 hour period during Preventative Maintenance 
+periods.'' 
 
 \wl
 \noindent
