--- a/text/questions.tex
+++ b/text/questions.tex
@@ -121,13 +121,13 @@ response to a grid request. }
 \noindent
 \textbf{PEAK SHEDDING:}  Utility provider arrangements used to reduce peak load, where the 
 reduced load is not shifted to another time. 
-Describe the nature of the communication	
+Describe the nature of the communication.
 
 \wl
 \noindent
 \textbf{PEAK SHIFTING:}  Utility provider arrangements where the load during peak times is moved, typically 
 to non-peak hours. 
-Describe the nature of the communication	
+Describe the nature of the communication.	
 
 \wl
 \noindent
@@ -135,19 +135,19 @@ Describe the nature of the communication
 consumption. There are two types of pricing, peak and real-time.  Peak pricing is pre-scheduled; 
 however, the consumer does not know if a certain day will be a peak or a non-peak day until day-ahead 
 or day-of.  Real-time pricing is not pre-scheduled; prices can be set day-ahead or day-of.	
-Describe the nature of the communication	
+Describe the nature of the communication.	
 
 \wl
 \noindent
 \textbf{GRID SCALE STORAGE:}  Methods used to store electricity on a large scale. Pumped-storage 
 hydroelectricity is the largest-capacity form of grid energy storage. 
-Describe the nature of the communication	
+Describe the nature of the communication.	
 
 \wl
 \noindent
 \textbf{RENEWABLES:}  Variability in the electric power generation from renewable resources 
 and the methods used to respond to that variability. 
-Describe the nature of the communication	
+Describe the nature of the communication.	
 
 \wl
 \noindent
@@ -156,7 +156,7 @@ Generators are typically used for frequency response, but any appliance that ope
 to a duty cycle (such as air conditioners and heat pumps) could be used to provide 
 a constant and reliable grid balancing service by timing their duty cycles in response 
 to system load.   	
-Describe the nature of the communication	
+Describe the nature of the communication.	
 
 \wl
 \noindent
@@ -164,7 +164,7 @@ Describe the nature of the communication
 reserves that are needed to balance generation and demand at all times.  Raising supply 
 is up regulation and lowering supply is down regulation. There are many types of reserves 
 (e.g., operating, congestion), distinguished by who controls them and what they are used for. 
-Describe the nature of the communication	
+Describe the nature of the communication.	
 
 \wl
 \noindent
@@ -174,7 +174,7 @@ system operators must re-dispatch generation or, in the limit, deny some of thes
 requests to prevent transmission lines from becoming overloaded.  Or, methods used to 
 resolve congestion that occurs when the distribution control system is overloaded.  It 
 generally results in deliveries that are held up or delayed.     
-Describe the nature of the communication
+Describe the nature of the communication.
 
 \wl
 \noindent
