added comment to whitepaper.tex

--- a/text/whitepaper.tex
+++ b/text/whitepaper.tex
@@ -97,6 +97,9 @@ Fname Lname, Affiliation
 \input{opportunities}
 \label{sec:opportunities}
 
+%To move survey questions to after the Bibliography
+%uncomment the three lines before end{document} 
+%and comment out the next three lines.
 \section{Survey Questions}
 \input{questions}
 \label{sec:questions}
@@ -114,5 +117,9 @@ Fname Lname, Affiliation
 %
 
 %\input{tableorg}
+
+%\section{Appendix}
+%\input{questions}
+%\label{sec:questions}
 
 \end{document}
