singular/plural consistency

--- a/text/abstract.tex
+++ b/text/abstract.tex
@@ -9,7 +9,7 @@ on the electrical grid reliability in terms of energy consumption, peak power an
 Supercomputer center power demand can be greater than 20MW or more---the 
 theoretical peak power requirements are greater than 45MW---and re-occurring 
 intra-hour variability can exceed 8MW.
-Consequently, the electricity service providers for some supercomuter centers
+Consequently, the electricity service providers for some supercomputer centers
 are asking for hourly forecasts of power demand, a day in advance.
 This paper evaluates today`s relationships, potential partnerships and possible 
 integration between supercomputer centers and their electricity service providers.
