--- a/text/supercomputercenters.tex
+++ b/text/supercomputercenters.tex
@@ -94,8 +94,11 @@ evolve with smart-grid capabilities.
 
 \section{Supercomputing Centers and \\ HPC-Grid Integration}
 
-In recent times, the fundamental drive in supercomputing to increase peak performance by adding increasing number of power hungry components has waned, with the shift in focus to energy efficiency to mitigate large operating costs.
-In addition, supercomputing centers are concerned about quality, availability and environmental \&  social impact.
+In recent times, the fundamental drive in supercomputing to increase peak performance by adding 
+increasing number of power hungry components has waned, with the shift in focus to energy 
+efficiency to mitigate large operating costs.
+In addition, supercomputing centers are concerned about quality, availability, and 
+environmental and social impact.
 As described in Section~\ref{sub:EPP}, ESPs may request 
 a change in timing and/or magnitude of demand by supercomputing centers.  
 In response, supercomputing centers may employ one or more of a number of strategies to control their 
