added survey summary; still needs intro text

--- a/text/whitepaper.tex
+++ b/text/whitepaper.tex
@@ -93,16 +93,21 @@ Fname Lname, Affiliation
 \input{questionnaire}
 \label{sec:questionnaire}
 
+%To move survey questions to after the Bibliography
+%uncomment the three lines before end{document} 
+%and comment out the next three lines.
+%\section{Survey Questions}
+%\input{questions}
+%\label{sec:questions}
+
+\section{Summary of the Survey\\ Questions}
+\input{surveysummary}
+\label{sec:surveysummary}
+
 \section{Opportunities/Solutions and\\ Barriers} 
 \input{opportunities}
 \label{sec:opportunities}
 
-%To move survey questions to after the Bibliography
-%uncomment the three lines before end{document} 
-%and comment out the next three lines.
-\section{Survey Questions}
-\input{questions}
-\label{sec:questions}
 
 \section{Conclusions and Next Steps}
 \input{conclusion}
